# RustApi

./: Cargo.toml  README.md
domain_code/: Cargo.toml
src/: data_manager.rs  http_handler.rs  main.rs  stock_parsing.rs  testing.json
